--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  functions = "netlify/functions/"
+command = "npm run build"
+publish = "/"
 
 [functions]
-  node_bundler = "esbuild"
+directory = "netlify/functions"
