--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "firebase-admin": "^13.5.0",
-    "stripe": "^18.5.0"
+    "stripe": "^18.5.0",
+    "@sendgrid/mail": "^8.1.0"
   }
 }
